olx clone search  va paginetion

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,20 @@
 section {
     padding: 60px 0;
 }
+
+  
+  .transarent-link{
+    text-decoration: none;
+    color: #000;
+  }
+  
+  .main-button{
+    padding: 1rem 2rem;
+    background-color: #002f34;
+    color: #fff;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    gap: 0 10px;
+  }
+  
