--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -1,9 +1,72 @@
 .search__wrapper{
     background-color: #fff;
     min-height: 100px ;
+    display: flex;
+   
 }
 .search__form{
     display: flex;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    button{
+        height: 100%;
+        border: none;
+        padding: 0 30px;
+        background-color: #fff;
+        font-size: 20px;
+        border-left: 2px solid #f2f4f5;
+    }
+    button:hover{
+        background-color: #002f34;
+        color: #fff;
+        cursor: pointer;  
+    }
+   
+}
+.search__input__wrapper{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    padding-left: 30px;
+ input{
+        height: 100%;
+        flex: 1;
+        border:none;
+        outline: none;
+        font-size: 20px;
+    }
+    svg{
+        font-size: 30px;
+        margin-right: 30px;
+        color: gray;
+    }
+    position: relative;
+    .search-suggestions{
+        padding: 0 0 30px 0;
+        width: 100%;
+        background-color:#fff;
+        position: absolute;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        top: 100px;
+        left: 0px;
+        .search__result__item{
+            padding: 12px 30px;
+            display: block;
+            font-size: 20px;
+            border: 1px solid #e1e1e1;
+            &:last-child{
+                border: 0;
+            }
+            &:hover{
+                background-color: #002f34;
+                color: #fff;
+            }
+
+
+
+
+        }
+    }
+    
 }
